[metadata]
name = spicepy
version = 1.0.4
author = Luca Giaccone
author_email = luca.giaccone@polito.it
description = Circuit simulator written in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giaccone/SpicePy
project_urls =
    wiki = https://github.com/giaccone/SpicePy/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
